Drum Kitの学習が完了。 index-START.htmlに日本語での補足をコメントに残した。 背景画像を追加し、ドラムっぽさを演出。

--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(https://i.imgur.com/b9r5sEL.jpg) bottom center;
+  background: url(/img/matthijs-smit-bRG2C0FAQEY-unsplash.jpg) center bottom;
   background-size: cover;
 }
 
